--- a/css/home.css
+++ b/css/home.css
@@ -67,8 +67,9 @@
     }
 
     .logo {
-      width:70%;
+      width:40%;
       height: auto;
+      text-align: left;
     }
 
     /* Hover-Funktion für die Links */
